[gd_scene load_steps=2 format=3 uid="uid://rur60niy3l0n"]

[ext_resource type="Script" path="res://scripts/uis/ExperiementalFrame.gd" id="1_ndfif"]

[node name="ExpirementalFrame" type="CanvasLayer"]
layer = 100
script = ExtResource("1_ndfif")

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
size = Vector2i(232, 100)
ok_button_text = "ui.yes"
dialog_text = "ui.experimental_frame.desc"
cancel_button_text = "ui.no"

[connection signal="canceled" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_canceled"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
